# Introdu--o-API-REST

./: README.md  pyproject.toml
alunos/: admin.py  serializers.py  views.py
alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_aluno.py
biblioteca/: models.py  serializers.py  views.py
biblioteca/migrations/: 0001_initial.py
config/: settings.py  urls.py
